--- a/monitor.html
+++ b/monitor.html
@@ -11,7 +11,7 @@
     <div id="txtEvent"></div>
     <hr />
     <h2>Past Events</h2>
-    <textarea readonly id="txtLog"></textarea>
+    <textarea readonly id="txtLog" wrap="off"></textarea>
     <hr style="margin: 15px 0px 15px 0px;" />
     <p>
         If this is unexpected, please contact your administrator and share the text from the page <b>about:policy</b>.
