add clear log button

--- a/monitor.html
+++ b/monitor.html
@@ -9,11 +9,13 @@
 <body>
     <h2>Latest Event</h2>
     <div id="txtEvent"></div>
-    <hr />
+
     <h2>Past Events</h2>
     <textarea readonly id="txtLog" wrap="off"></textarea>
     <hr style="margin: 15px 0px 15px 0px;" />
     <p>
         If this is unexpected, please contact your administrator and share the text from the page <b>about:policy</b>.
+        <br />
+        <button id="btnClear">Clear log</button>
     </p>
 </body>
